# orbitscribe-workspace

./: .gitignore  AGENTS.md  BOOTSTRAP_PLAN.md  CONNECTION_RESILIENCE_PLAN.md  KIMI-TOOLS.md  OPTIMIZATION_REPORT.md  README.md  ROCK_SOLID_REPORT.md  ZERO_CAPITAL_SWARM_DEPLOYMENT_PLAN.md  create_float_shortcut.ps1  diag.py  fix_emojis.py  fix_panel.py  generate_icon.py  generate_logo.py  inspect.bat  inspector.py  jukebox_server.err  jukebox_state.json  launch-dev.bat  launch.bat  launch.py  launch_jukebox.py  orbitscribe-dashboard.html  reload-and-continue.bat  reload-and-continue.ps1  setup.bat  start.bat  start_console.bat  start_docked.bat  start_float.bat  start_web.bat  test_monetization.py  test_visualizer.py  tmp_check_max_param.py  tmp_check_params.py  tmp_test_gradio.py  tmp_test_payload.py  verify-ext.js  visualizer.py  (+5 more)
aoe/: Dockerfile
aoe/supervisor/: Cargo.toml
aoe/supervisor/.cargo/: config.toml
aoe/supervisor/src/: docker.rs  http.rs  main.rs
content/: clickbank_products.json
extension/: README.md  node_bootstrap.py  package-lock.json  package.json
infinite_jukebox/: acestep_bridge.py  architecture.py  prompt_generator.py  server.py
leads/: outreach_20260527.csv  outreach_20260527_20260527.csv
money_engine/: README.md  __init__.py  base_agent.py  browser_controller.py  kimi_bridge.py  orchestrator.py  vision_helper.py
simplepod/: PLAN.md  README.md  app.py  build_exe.bat  build_exe.sh  client.py  config.py  discovery.py  money_engine_bridge.py  remote_api.py  requirements.txt  run.py  simplepod.spec
swarm-backend/: .env.example  main.py  (+3 more)
(+512 files in other folders)
