[package]
name = "aoe-supervisor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bollard = { version = "0.18", features = ["ssl"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
bytes = "1"
tower = "0.4"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
winapi = { version = "0.3", features = ["namedpipeapi", "winbase", "fileapi", "handleapi"] }

[[bin]]
name = "aoe"
path = "src/main.rs"
